Maximizing data portability and safety.
